# bioptim

./: .appveyor.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Notes  README.md  TechOpt83_multi_model_boucle.py  Trampo_simple.py  __init__.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: autoblack.yml  isblacked.yml  run_tests.yml  run_tests_linux.yml  run_tests_osx_win.yml
Problemes_Eve/: Trampo_simple.py  Trampoline_example.py
bioptim/: .codeclimate.yml  __init__.py
bioptim/dynamics/: configure_new_variable.py  configure_problem.py  configure_variables.py  dynamics_evaluation.py  dynamics_functions.py  dynamics_type.py  fatigue_dynamics.py  integrator.py  lagrange_interpolation.py  lagrange_polynomials.py  michaud_fatigue.py  ode_solver.py  ode_solver_base.py  ode_solvers.py  problem.py  rk_base.py  xia_fatigue.py
bioptim/examples/: __main__.py  utils.py
bioptim/gui/: animate_interface.py  check_conditioning.py  graph.py  ipopt_output_plot.py  online_callback.py  online_callback_abstract.py  online_callback_multiprocess.py  online_callback_multiprocess_server.py  online_callback_server.py  plot.py  serializable_class.py  (+2 more)
biorbd_optim/: __init__.py  __version__.py  acados_interface.py  biorbd_interface.py  constraints.py  continuity.py  dynamics.py  enums.py  goal.py  integrator.py  ipopt_interface.py  mapping.py  objective_functions.py  optimal_control_program.py  parameters.py  path_conditions.py  penalty.py  phase_transition.py  plot.py  problem_type.py  simulate.py  solver_interface.py  tests.py  utils.py  variable.py  variable_optimisation.py  variable_optimization.py
doc/: contributing.md
docs/: breaking_change_template.md  contributing.md  generating_plot_reference_images.md  pinocchio_model.md  pull_request_template.md  release_checklist.md
examples/: README.md  __main__.py  eocarBiorbd.py  example_app.py  examples.py  utils.py
resources/: bioptim_plotting_server.py  plotting_server.py
sandbox/: tata.py
tests/: __init__.py  file_2_2_2.botest  file_2_2_3.botest  test ocp_passive_torque.py  test__global_plots.py  test__run_examples.py  test_acados_interface.py  test_access.py  test_align.py  test_all_examples.py  test_biorbd_model.py  test_biorbd_model_holonomic.py  test_biorbd_multi_model.py  test_bounds_accessor.py  test_computational_time.py  test_continuity_as_objective.py  test_controltype_none.py  test_cost_function_integration.py  test_custom_model.py  test_dynamics.py  test_emg_tracking.py  test_eocar.py  test_fatigue.py  test_getting_started.py  test_global_align.py  test_global_fail.py  test_global_fatigue.py  test_global_getting_started.py  test_global_inverse_optimal_control.py  test_global_mhe.py  test_global_minimize_marker_velocity.py  test_global_muscle_driven_ocp.py  test_global_muscle_tracking.py  test_global_muscle_tracking1.py  test_global_muscle_tracking_2.py  test_global_muscle_trakcing1.py  test_global_nmpc_final.py  test_global_optimal_time.py  test_global_optimal_time_mayer_min.py  test_global_plots.py  (+48 more)
(+832 files in other folders)
